@@ -2,6 +2,10 @@
    Copyright 2020-2022 David Robillard <d@drobilla.net>
    SPDX-License-Identifier: ISC
 
+####
+Lilv
+####
+
 Lilv is a library for working with LV2_ plugins.
 It provides several types and functions that can be used to discover plugins,
 investigate their data, load and run them, and save and restore their state.
@@ -10,4 +14,10 @@ Lilv is the standard implementation used by nearly all LV2 hosts.
 It implements the details of the LV2 specification on POSIX, MacOS, and Windows,
 and provides a simpler portable API for applications.
 
+.. toctree::
+
+   overview
+   api/lilv
+
 .. _LV2: http://lv2plug.in/
+
